@@ -2,7 +2,7 @@ name             = DBIx-Exceptions
 author           = Arthur Axel "fREW" Schmidt <frioux+cpan@gmail.com>
 license          = Perl_5
 copyright_holder = Arthur Axel "fREW" Schmidt
-version          = 0.001000_02
+version          = 0.001000_03
 
 [NextRelease]
 [@Git]
@@ -19,10 +19,12 @@ remove = MetaYAML
 
 [Prereqs]
 parent           = 0
+DBD::SQLite      = 0
 Test::More       = 0.94
 Test::Exception  = 0
-Moose            = 0
+Moo              = 0
 Exception::Class = 0
 Try::Tiny        = 0
 DBI              = 0
 Carp             = 0
+JSON             = 0
