@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Fix Deps
+  - Switch from Moose to Moo
 
 0.001000_02 2010-12-08 18:28:59 CST6CDT
   - Get stuff from remote merged in
